syntax = "proto3";

package id_token;

message IdTokenRequest {
  string user_id = 3;
  string client_id = 4;
  string nonce = 6;
  repeated string audience = 7;
  repeated string scope = 11;
}

message IdTokenResponse {
  string token = 5;
}